Updated cover img to resolve contrast issues

--- a/main.css
+++ b/main.css
@@ -163,7 +163,9 @@
   #cover {
     width: 100%;
     height: 100%;
-    background-image: url('https://iili.io/JPfYeR.jpg');
+    /*background-image: url('https://iili.io/JPfYeR.jpg');
+    opacity: 0.5*/
+    background-image: url('https://i.postimg.cc/26d3MF1V/Screen-Shot-2021-04-07-at-9-01-48-AM.png');
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -176,11 +178,12 @@
     text-align: center;
     font-family: 'Open Sans', sans-serif;
     font-size: 50px;
-    color: #E1ECF0;
-    text-shadow: -1px 2px 0 #003A64,
+    color: #ffffff;
+    text-shadow: -2px 3px 0 #003A64,
 				2px 2px 0 #003A64,
 				2px -2px 0 #003A64,
 				-2px -2px 0 #003A64;
+    opacity: 1;
   }
 
   #header {
